--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
 CODEOWNERS
-*         @dantes-git @gabcoelho @pedropnaves @tarcisiogc @tuliopereirazup @hernandazevedozup @matheusribeirozup @hthemir @danilorochazup @ze12augusto @LG95 @theffc @victormr @yandiaszup @gmarson @uziasferreirazup @lucasaraujo @jefersonlopeszup @paulomeurerzup @adautopaulazup @gabrielleonardozup @caioortu @lucasfonsecazup @carlossteinzup @viniciusguardieirozup @luisgustavozup @luisoliveirazup @joaoabreuzup @jenifersantoszup @@Tiagoperes
+*         @dantes-git @gabcoelho @pedropnaves @tarcisiogc @tuliopereirazup @hernandazevedozup @matheusribeirozup @hthemir @danilorochazup @ze12augusto @LG95 @theffc @victormr @yandiaszup @gmarson @uziasferreirazup @lucasaraujo @jefersonlopeszup @paulomeurerzup @adautopaulazup @gabrielleonardozup @caioortu @lucasfonsecazup @carlossteinzup @viniciusguardieirozup @luisgustavozup @luisoliveirazup @joaoabreuzup @jenifersantoszup @Tiagoperes
 
 android/  @tuliopereirazup @hernandazevedozup @matheusribeirozup @uziasferreirazup @hthemir @danilorochazup @jefersonlopeszup @tarcisiogc @paulomeurerzup @gabrielleonardozup @carlossteinzup @viniciusguardieirozup @luisoliveirazup @jenifersantoszup
 iOS/ @theffc @gabcoelho @dantes-git @victormr @yandiaszup @gmarson @lucasaraujo @tarcisiogc @caioortu @lucasfonsecazup @luisgustavozup @joaoabreuzup
