--- a/.github/workflows/horusec_pr.yml
+++ b/.github/workflows/horusec_pr.yml
@@ -20,4 +20,4 @@ jobs:
         HORUSEC_CLI_REPOSITORY_AUTHORIZATION: ${{ secrets.HORUSEC_CLI_REPOSITORY_AUTHORIZATION }}
       run: |
         curl -fsSL https://horusec.io/bin/install.sh | bash
-        horusec start -p ./ --ignore="**/sample/**,**/.gradle/**,**/automatedTests/**,**/automated-tests/**,**/iOS/Libraries/**,**/iOS/Tests/**,**/flutter/beagle/assets/**,**/tests/appium/**" -a "$HORUSEC_CLI_REPOSITORY_AUTHORIZATION" -n "beagle" -e "true" -u "https://api-horusec.zup.com.br"  -G "true" -F "ba3a605f761ba4d5755128a8d87be8b9fd6e47b4ff3c0d0feba86bfe937e581e,ee5c797510e940f30b021f481137f5df140b2cd3d66d6a15eef07a25c0580f92"
+        horusec start -p ./ --ignore="**/sample/**,**/.gradle/**,**/automatedTests/**,**/automated-tests/**,**/iOS/Libraries/**,**/iOS/Tests/**,**/flutter/beagle/assets/**,**/tests/appium/**" -a "$HORUSEC_CLI_REPOSITORY_AUTHORIZATION" -n "beagle" -e "true" -u "https://api-horusec.zup.com.br"  -G "true" -F "ba3a605f761ba4d5755128a8d87be8b9fd6e47b4ff3c0d0feba86bfe937e581e,ee5c797510e940f30b021f481137f5df140b2cd3d66d6a15eef07a25c0580f92, 9ebcedfab07c79c309b7e2f1112434c0641819fd6434bf413d8251f7a4698298"
