--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -112,12 +112,12 @@ jobs:
 
             -   name: Run the tests
                 run: | 
-                     APP_FILE=`find ~/Library/Developer/Xcode/DerivedData -name AppiumApp.app | grep Build/Products/Debug-iphonesimulator/AppiumApp.app` 
+                    # APP_FILE=`find ~/Library/Developer/Xcode/DerivedData -name AppiumApp.app | grep Build/Products/Debug-iphonesimulator/AppiumApp.app` 
                     ./tests/appium/project/gradlew -p tests/appium/project cucumber \ 
                     -Dplatform=ios \ 
                     -Dplatform_version='13.5' \ 
                     -Ddevice_name='iPhone 11' \ 
-                    -Dapp_file='$APP_FILE'
+                    -Dapp_file='`find ~/Library/Developer/Xcode/DerivedData -name AppiumApp.app | grep Build/Products/Debug-iphonesimulator/AppiumApp.app`'
                    
 
             -   name: Expose failed test screenshot files
