--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -77,7 +77,7 @@ jobs:
             -   name: Build app-ios project to generate the app file
                 run: | 
                      set -e
-                     cd tests\appium\app-ios\AppiumApp\AppiumApp.xcodeproj && xcodebuild clean install && 
+                     cd $GITHUB_WORKSPACE\tests\appium\app-ios\AppiumApp\AppiumApp.xcodeproj && xcodebuild clean install && 
                      cd $GITHUB_WORKSPACE
             
             
@@ -111,13 +111,15 @@ jobs:
 
 
             -   name: Run the tests
+                env:
+                    APP_FILE:
                 run: | 
-                    # APP_FILE=`find ~/Library/Developer/Xcode/DerivedData -name AppiumApp.app | grep Build/Products/Debug-iphonesimulator/AppiumApp.app` 
+                     ${APP_FILE:=`find ~/Library/Developer/Xcode/DerivedData -name AppiumApp.app | grep Build/Products/Debug-iphonesimulator/AppiumApp.app`} 
                     ./tests/appium/project/gradlew -p tests/appium/project cucumber \ 
                     -Dplatform=ios \ 
                     -Dplatform_version='13.5' \ 
                     -Ddevice_name='iPhone 11' \ 
-                    -Dapp_file='`find ~/Library/Developer/Xcode/DerivedData -name AppiumApp.app | grep Build/Products/Debug-iphonesimulator/AppiumApp.app`'
+                    -Dapp_file='$APP_FILE'
                    
 
             -   name: Expose failed test screenshot files
