--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -109,12 +109,10 @@ jobs:
             # Emulator config - end
             ##################################################################################################
 
-
             -   name: Run the tests
-                env:
-                    APP_FILE:
-                run: | 
-                     ${APP_FILE:=`find ~/Library/Developer/Xcode/DerivedData -name AppiumApp.app | grep Build/Products/Debug-iphonesimulator/AppiumApp.app`} 
+                run: |
+                     APP_FILE=$(find ~/Library/Developer/Xcode/DerivedData -name AppiumApp.app \ 
+                     | grep Build/Products/Debug-iphonesimulator/AppiumApp.app) && 
                     ./tests/appium/project/gradlew -p tests/appium/project cucumber \ 
                     -Dplatform=ios \ 
                     -Dplatform_version='13.5' \ 
