--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -110,15 +110,7 @@ jobs:
             ##################################################################################################
 
             -   name: Run the tests
-                run: |
-                     APP_FILE=$(find ~/Library/Developer/Xcode/DerivedData -name AppiumApp.app \ 
-                     | grep Build/Products/Debug-iphonesimulator/AppiumApp.app) && 
-                    ./tests/appium/project/gradlew -p tests/appium/project cucumber \ 
-                    -Dplatform=ios \ 
-                    -Dplatform_version='13.5' \ 
-                    -Ddevice_name='iPhone 11' \ 
-                    -Dapp_file='$APP_FILE'
-                   
+                run: bash fastlane/automatedTests/appium/ios/run_appium_ios_tests.sh 
 
             -   name: Expose failed test screenshot files
                 if: failure()
