--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -77,7 +77,7 @@ jobs:
             -   name: Build app-ios project to generate the app file
                 run: | 
                      set -e
-                     cd $GITHUB_WORKSPACE\tests\appium\app-ios\AppiumApp\AppiumApp.xcodeproj && xcodebuild clean install && 
+                     cd tests/appium/app-ios/AppiumApp/AppiumApp.xcodeproj && xcodebuild clean install && 
                      cd $GITHUB_WORKSPACE
             
             
