--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -90,13 +90,15 @@ jobs:
                      set -e
                      echo "##### List of iOS Devices & Platforms:" 
                      xcrun simctl list
-                     echo "##### Installing simulator"
+                     echo "##### Installing iOS simulator ..."
                      gem sources --add https://rubygems.org/
-                     gem install xcode-install xcversion simulators --install='iOS 13.5'      
+                     gem install xcode-install 
+                     xcversion simulators --install='iOS 13.5'      
             
             -   name: Create and Run iOS Emulator        
                 run: |
                      set -e
+                     "##### Creating iOS image and starting emulator with it ..."
                      xcrun simctl create TestiPhoneX com.apple.CoreSimulator.SimDeviceType.iPhone-11 \ 
                      com.apple.CoreSimulator.SimRuntime.iOS-13-5 > ~/deviceIdTemp.txt 
                      DEVICEUUID=`cat deviceid.txt` 
