--- a/backend/automated-tests/src/main/resources/application.properties
+++ b/backend/automated-tests/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.jackson.default-property-inclusion=NON_NULL
+spring.jackson.serialization.indent-output=true
 management.endpoint.shutdown.enabled=true
 management.endpoints.web.exposure.include=health,info,shutdown
+
