--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -101,8 +101,7 @@ jobs:
                      echo "##### Devicetypes runtime:"
                      xcrun simctl list devicetypes runtimes
                      echo "##### Creating iOS image and starting emulator with it ..."
-                     xcrun simctl create TestiPhoneX com.apple.CoreSimulator.SimDeviceType.iPhone-11 \ 
-                     com.apple.CoreSimulator.SimRuntime.iOS-13-5 > ~/deviceIdTemp.txt 
+                     xcrun simctl create TestiPhoneX com.apple.CoreSimulator.SimDeviceType.iPhone-11 com.apple.CoreSimulator.SimRuntime.iOS-13-5 > ~/deviceIdTemp.txt 
                      DEVICEUUID=`cat deviceid.txt` 
                      echo "Device id: $DEVICEUUID" 
                      xcrun simctl boot $DEVICEUUID 
