--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -102,7 +102,7 @@ jobs:
                      xcrun simctl list devicetypes runtimes
                      echo "##### Creating iOS image and starting emulator with it ..."
                      xcrun simctl create TestiPhoneX com.apple.CoreSimulator.SimDeviceType.iPhone-11 com.apple.CoreSimulator.SimRuntime.iOS-13-5 > ~/deviceIdTemp.txt 
-                     DEVICEUUID=`cat deviceid.txt` 
+                     DEVICEUUID=`cat deviceIdTemp.txt` 
                      echo "Device id: $DEVICEUUID" 
                      xcrun simctl boot $DEVICEUUID 
                      sleep 30
