--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -85,15 +85,15 @@ jobs:
             # Emulator config - start
             ##################################################################################################            
 
-            # -   name: Install iOS Runtime        
-                # run: |  
-                     # set -e
-                     # echo "##### List of iOS Devices & Platforms:" 
-                     # xcrun simctl list
+             -   name: Install iOS Runtime        
+                 run: |  
+                      set -e
+                      echo "##### List of iOS Devices & Platforms:" 
+                      xcrun simctl list
                      # echo "##### Installing iOS simulator ..."
                      # gem sources --add https://rubygems.org/
                      # gem install xcode-install 
-                     # xcversion simulators --install='iOS 13.5'      
+                     xcversion simulators --install='iOS 13.5'      
             
             -   name: Create and Run iOS Emulator        
                 run: |
