--- a/flutter/sample/pubspec.yaml
+++ b/flutter/sample/pubspec.yaml
@@ -48,3 +48,6 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - images/
