--- a/.github/workflows/tests/appium/automated_tests_appium_ios.yml
+++ b/.github/workflows/tests/appium/automated_tests_appium_ios.yml
@@ -22,12 +22,7 @@ on:
         branches:
             - master
         paths:
-            - 'iOS/**'
-            - 'backend/**'
-            - 'test/appium/app-ios/**'
-            - 'test/appium/project/**'
-            - '.github/workflows/tests/appium'
-            - 'fastlane/automatedTests/appium'  
+            - '.github/**'  
     
     pull_request:
         branches:
