--- a/.github/workflows/automated_tests_appium_android.yml
+++ b/.github/workflows/automated_tests_appium_android.yml
@@ -17,19 +17,31 @@
 name: Beagle Appium Android Tests
 
 on: workflow_dispatch
-# testing for this PULL REQUEST only. Will be set back to 'workflow_dispatch' afterwards 
 #on:
-#    push:
+#    push: # for testing with draft mode. Will be removed afterwards
 #        branches:
 #            - master
 #        paths:
+#            - 'android/**'
+#            - 'backend/**'
+#            - 'test/appium/app-android/**'
+#            - 'test/appium/project/**'
 #            - '.github/**'
+#            - 'fastlane/automatedTests/appium'  
+    
 #    pull_request:
+#        branches:
+#            - master
 #        paths:
+#            - 'android/**'
+#            - 'backend/**'
+#            - 'test/appium/app-android/**'
+#            - 'test/appium/project/**'
 #            - '.github/**'
+#            - 'fastlane/automatedTests/appium'
+
 
 jobs:
-     
     appium_tests:
         
         name: Run Appium Android tests
@@ -84,11 +96,26 @@ jobs:
             -   name: Install Fastlane
                 run: bundle config set path '~/.gem' && bundle install
 
-            # TODO: bff open server on demand...
-            #-   name: Start Beagle backend in background
-            #    run: ...
-            #-   name: Wait for server to start
-            #    run: sleep 30
+            ##################################################################################################
+            # BFF setup - start
+            ##################################################################################################
+
+#            -  name: Configure AWS credentials
+#               uses: aws-actions/configure-aws-credentials@v1
+#               with:
+#                   aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#                   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#                   aws-region: sa-east-1
+#
+#           -   name: Update kubeconfig
+#               run: aws eks update-kubeconfig --name beagle-cluster
+#
+#           -   name: Deploy to Kubernetes cluster
+#               run: ../../.github/scripts/helm-deploy.sh
+
+            ##################################################################################################
+            # BFF setup - end
+            ##################################################################################################
 
             -   name: Build app-android project to generate the app file
                 env:
