--- a/.github/workflows/flutter-pr.yml
+++ b/.github/workflows/flutter-pr.yml
@@ -19,17 +19,18 @@ jobs:
             -   uses: subosito/flutter-action@v1
                 with:
                   channel: 'stable' # or: 'dev' or 'beta'
-            -   name: Cache fastlane dependences
+
+            -   name: get github actions image version
+                run: echo "ImageVersion=$ImageVersion"  >> $GITHUB_ENV
+
+            -   name: Cache ruby gems dependencies
                 uses: actions/cache@v2
                 env:
-                    fastlane-cache-key: fastlane-cache
-                    fastlane-path: ~/.gem
+                    keyPath: ${{ runner.os }}-gems-${{ env.ImageVersion }}
                 with:
-                    path: ${{ env.fastlane-path }}
-                    key: ${{ runner.os }}-build-${{ env.fastlane-cache-key }}-${{ hashFiles('Gemfile.lock') }}
-                    restore-keys: ${{ runner.os }}-build-${{ env.fastlane-cache-key }}
-            -   name: Install Fastlane
-                run: bundle config set path '~/.gem' && bundle install
+                    path: ~/.gem
+                    key: ${{ env.keyPath }}-${{ hashFiles('Gemfile.lock') }}
+                    restore-keys: ${{ env.keyPath }}
 
             -   name: Cache pub dependences
                 uses: actions/cache@v2
