make all code similar in every workflow

--- a/.github/workflows/ios-pr.yml
+++ b/.github/workflows/ios-pr.yml
@@ -19,9 +19,9 @@ jobs:
         steps:
             -   uses: actions/checkout@v2
 
+            # Fastlane
             -   name: get github actions image version
                 run: echo "ImageVersion=$ImageVersion"  >> $GITHUB_ENV
-
             -   name: Cache ruby gems dependencies
                 uses: actions/cache@v2
                 env:
