--- a/.github/workflows/automated_tests_appium_android.yml
+++ b/.github/workflows/automated_tests_appium_android.yml
@@ -18,17 +18,7 @@ name: Beagle Appium Android Tests
 
 #on: workflow_dispatch
 on:
-#    push:
-#        branches:
-#            - master
-#        paths:
-#            - 'android/**'
-#            - 'backend/**'
-#            - 'test/appium/app-android/**'
-#            - 'test/appium/project/**'
-#            - '.github/**'
-#            - 'fastlane/automatedTests/appium'
-    pull_request:
+    push:
         branches:
             - master
         paths:
@@ -38,6 +28,16 @@ on:
             - 'test/appium/project/**'
             - '.github/**'
             - 'fastlane/automatedTests/appium'
+#    pull_request:
+#        branches:
+#            - master
+#        paths:
+#            - 'android/**'
+#            - 'backend/**'
+#            - 'test/appium/app-android/**'
+#            - 'test/appium/project/**'
+#            - '.github/**'
+#            - 'fastlane/automatedTests/appium'
 
 jobs:
     appium_tests:
