--- a/.github/workflows/automated_tests_appium_android.yml
+++ b/.github/workflows/automated_tests_appium_android.yml
@@ -18,16 +18,16 @@ name: Beagle Appium Android Tests
 
 #on: workflow_dispatch
 on:
-    push:
-        branches:
-            - master
-        paths:
-            - 'android/**'
-            - 'backend/**'
-            - 'test/appium/app-android/**'
-            - 'test/appium/project/**'
-            - '.github/**'
-            - 'fastlane/automatedTests/appium'
+#    push:
+#        branches:
+#            - master
+#        paths:
+#            - 'android/**'
+#            - 'backend/**'
+#            - 'test/appium/app-android/**'
+#            - 'test/appium/project/**'
+#            - '.github/**'
+#            - 'fastlane/automatedTests/appium/**'
     pull_request:
         branches:
             - master
@@ -37,7 +37,7 @@ on:
             - 'test/appium/app-android/**'
             - 'test/appium/project/**'
             - '.github/**'
-            - 'fastlane/automatedTests/appium'
+            - 'fastlane/automatedTests/appium/**'
 
 jobs:
     appium_tests:
