--- a/.github/workflows/flutter-pr.yml
+++ b/.github/workflows/flutter-pr.yml
@@ -20,17 +20,17 @@ jobs:
                 with:
                   channel: 'stable' # or: 'dev' or 'beta'
 
-            -   name: get github actions image version
-                run: echo "ImageVersion=$ImageVersion"  >> $GITHUB_ENV
-
+            # Gems for Fastlane
             -   name: Cache ruby gems dependencies
                 uses: actions/cache@v2
                 env:
-                    keyPath: ${{ runner.os }}-gems-${{ env.ImageVersion }}
+                    keyPath: ${{ runner.os }}-gems
                 with:
                     path: ~/.gem
                     key: ${{ env.keyPath }}-${{ hashFiles('Gemfile.lock') }}
                     restore-keys: ${{ env.keyPath }}
+            -   name: Install gem dependencies
+                run: bundle config set path '~/.gem' && bundle install
 
             -   name: Cache pub dependences
                 uses: actions/cache@v2
