--- a/flutter/beagle_components/pubspec.yaml
+++ b/flutter/beagle_components/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   beagle:
     path: '../beagle'
+  transparent_image: ^1.0.0
 
 dev_dependencies:
   flutter_test:
